Remove BaseDir extern and replace with setBasePath function

--- a/Source/SysPosix/Utility/CMakeLists.txt
+++ b/Source/SysPosix/Utility/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(Utility_POSIX OBJECT 
                                 CondPosix.cpp 
-                                IOPosix.cpp 
+                                # IOPosix.cpp 
                                 ThreadPosix.cpp 
                                 TimingPosix.cpp
             )
