--- a/Source/SysPSP/Utility/CMakeLists.txt
+++ b/Source/SysPSP/Utility/CMakeLists.txt
@@ -9,7 +9,7 @@ add_library(Utility_PSP OBJECT
                                 VolatileMemPSP.cpp
                                 ${PROJECT_SOURCE_DIR}/Source/SysPosix/Utility/TimingPosix.cpp 
                                 ${PROJECT_SOURCE_DIR}/Source/SysPosix/Utility/ThreadPosix.cpp
-                                ${PROJECT_SOURCE_DIR}/Source/SysPosix/Utility/IOPosix.cpp
+                                # ${PROJECT_SOURCE_DIR}/Source/SysPosix/Utility/IOPosix.cpp
             )
 
             
