Posix timing is just STL now, move to base.

--- a/Source/SysCTR/Utility/CMakeLists.txt
+++ b/Source/SysCTR/Utility/CMakeLists.txt
@@ -1,9 +1,8 @@
 add_library(Utility_CTR OBJECT
                 CacheCTR.S
-                ${PROJECT_SOURCE_DIR}/Source/SysPosix/Utility/IOPosix.cpp
                 MemoryCTR.c
                 ThreadCTR.cpp
-                TimingCTR.cpp
+                # TimingCTR.cpp // We use the Timing based on the STL now. (Remove when tested okay)
             )
 
             
