Move all Input to the Input Folder

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -211,6 +211,7 @@ link_libraries(ZLIB::ZLIB)
 		add_subdirectory(HLEAudio)
 		add_subdirectory(HLEGraphics)
 		add_subdirectory(Interface)
+		add_subdirectory(Input)
 		add_subdirectory(Math)
 		add_subdirectory(OSHLE)
 		add_subdirectory(RomFile)
