--- a/Source/Utility/CMakeLists.txt
+++ b/Source/Utility/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_library(Utility OBJECT
+                            BatchTest.cpp
                             CRC.cpp 
                             FastMemcpy.cpp 
+                            FramerateLimiter.cpp
                             Hash.cpp 
                             IniFile.cpp 
                             MemoryHeap.cpp  
