Only use Timing if not CTR (Might need to change this for all embedded platforms)

--- a/Source/System/CMakeLists.txt
+++ b/Source/System/CMakeLists.txt
@@ -1,4 +1,13 @@
-add_library(System OBJECT CompressedStream.cpp SystemInit.cpp)
+if(NOT DAEDALUS_CTR)
+set(Timing Timing.cpp)
+endif()
+
+add_library(System OBJECT 
+
+            CompressedStream.cpp 
+            SystemInit.cpp
+            ${Timing}    
+            )
 
 target_include_directories(System PUBLIC ${ZLIB_INCLUDE_DIRS})
 
