Re-enable CTR timing

--- a/Source/SysCTR/Utility/CMakeLists.txt
+++ b/Source/SysCTR/Utility/CMakeLists.txt
@@ -2,7 +2,7 @@ add_library(Utility_CTR OBJECT
                 CacheCTR.S
                 MemoryCTR.c
                 ThreadCTR.cpp
-                # TimingCTR.cpp // We use the Timing based on the STL now. (Remove when tested okay)
+                TimingCTR.cpp 
             )
 
             
